[package]
name = "hello-server-rust"
version = "0.1.0"
edition = "2021"

[features]
default = []
client = []

[dependencies]
adaptivemsg = { git = "https://github.com/adaptivemsg/adaptivemsg-rust.git" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "time"] }
tracing-subscriber = "0.3"
anyhow = "1.0"
typetag = "0.2"
inventory = "0.3"
clap = { version = "=4.4.18", features = ["derive"] }

[[bin]]
name = "server"
path = "server.rs"

[lib]
name = "hello_server"
path = "lib.rs"
